# AgbakoAI

./: .devcontainer.json  .env  .gitignore  .sh  AgbakoAI.py  Agbako_ai.py  Agbakoai.py  Bash  Bash.sh  Brew.sh  Docker-compose.yml  Install.sh  Main.py  Readme.md  api.py  app.js  app.py  auth_middleware.py  brew.sh  ci.yml  db.sql  dockerfile  exceptions.py  express.js  generate-localhost-cert.sh  go_spec.md  index.html  kubu-hai.py  main.py  package-lock.json  pyproject.toml  run.py  run.sh  server.js  set_agbakoai.sh  update_readme.md.patch
.devcontainer/: devcontainer.json
.github/Workflows/: Deploy.yml
.github/workflows/: ci.yml
Docker/: Dockerfile
api/: clinical_trial_service.py  disease_db_service.py  herb_db_service.py  treatment_predictor_service.py
app/: app.js
backend/: .env  App.js  File.js  ai_task.py  api.js  app.jsx  auth.py  database.py  docker-compose.yml  main.py  models.py  redis_cache.py  server.js
backend/config/: db.js
backend/controllers/: userController.js
backend/models/: User.js
core/: disease_knowledge.py  herb_knowledge.py  treatment_predictor.py
frontend/: Docker-compose.yml
frontend/src/: .env  App.js  App.jsx  ErrorBoundary.jsx  (+2 more)
models/: disease_predictor.py  molecular_generator.py  trial_Simulator.py
module/: Fraud_detection.py  Inventry_mgnt.py  __init__.py  crop_predicition.py  disease_prediction.py  education.py  finance.py  healthcare.py  marketing.py  student_perfomance_prediction.py
scripts/: __init__.py  ai_main.py
src/: App.jsx
web/: Index.html  agbako_ui.py  express.js  progress.jsx  result.html
(+5 files in other folders)
