[tool.poetry]
name = "agbakoai"
version = "0.1.0"
description = "Modular AI system adaptable across sectors"
authors = ["Kubu Lee <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.7.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
ruff = "^0.4.4"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
